--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=hopesealchange.com.mysql
 DB_PORT=3306
 DB_DATABASE=hopesealchange_combasesealchange
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=hopesealchange_combasesealchange
+DB_PASSWORD=Azerty7p1960@
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,9 +29,9 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.googlemail.com
 MAIL_PORT=465
-MAIL_USERNAME=hopesealchange@gmail.com
-MAIL_PASSWORD=kzqchtxjewrcdpoj
-MAIL_ENCRYPTION=ssl
+MAIL_USERNAME=infos@hopesealchange.com
+MAIL_PASSWORD=Azerty7p1960
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
