--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=hopesealchange.com.mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=hopesealchange_combasesealchange
-DB_USERNAME=hopesealchange_combasesealchange
-DB_PASSWORD=Azerty7p1960@
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
