--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hopesealchange_combasesealchange
+DB_DATABASE=hopesealchange_combasesealchange 
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -27,7 +27,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.googlemail.com
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=liphzone@gmail.com
 MAIL_PASSWORD=eeaywmmvmajevwsd
